tests/error/poly_errors/arg_mismatch7.py
from guppylang.decorator import guppy
from guppylang.std.builtins import array

n = guppy.nat_var("n")


@guppy.declare
def foo(x: array[int, n]) -> None:
    ...


@guppy
def main(xs: array[int, 42]) -> None:
    foo[43](xs)


guppy.compile(main)
