tests/error/poly_errors/arg_mismatch7.err
Error: Type mismatch (at $FILE:14:12)
   | 
12 | @guppy
13 | def main(xs: array[int, 42]) -> None:
14 |     foo[43](xs)
   |             ^^ Expected argument of type `array[int, 43]`, got `array[int,
   |                42]`

Guppy compilation failed due to 1 previous error
